[project]
name = "pandaset-tutorial"
version = "0.1.0"
description = "pandaset tutorial"
readme = "README.md"
requires-python = ">=3.12,<=3.13"
dependencies = [
    "matplotlib>=2.10.0",
    "numpy>=2.0.0",
    "open3d>=0.19.0",
    "pandaset",
]

[tool.uv.sources]
pandaset = { git = "https://github.com/ko21suke/pandaset-devkit.git", subdirectory = "python", rev = "fix-extention" }
